# AIPX

./: .env.example  .gitignore  .golangci.yml  CI_CD_SETUP_SUMMARY.md  CLEANUP-SUMMARY.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  Makefile  OPERATIONS.md  PHASE-0-SETUP-COMPLETE.md  PHASE6_DELIVERABLES.txt  README.md  SHARED_PACKAGES_SUMMARY.md  docker-compose.yml
.github/: QUICK_REFERENCE.md  dependabot.yml
docs/: AWS-ARCHITECTURE.md  EXECUTION-LAYER-PHASE1-2-COMPLETION.md  api-spec.md  architecture.md  data-flow.md  database-strategy.md  deployment.md  development-setup.md  microservices-breakdown.md  security-fixes-implementation.md
k8s/: README.md
scripts/: README.md  proto-compile.sh  (+2 more)
services/backtesting-service/: .coverage  .dockerignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  TESTING_QUICKSTART.md  pyproject.toml  pytest.ini
services/backtesting-service/config/: config.yaml
services/backtesting-service/migrations/: 001_backtesting.sql
services/backtesting-service/src/: __init__.py
services/backtesting-service/src/data/: __init__.py  data_loader.py
services/backtesting-service/src/engine/: __init__.py  event_loop.py  matching_engine.py  portfolio.py
services/backtesting-service/src/metrics/: __init__.py  performance_metrics.py  risk_metrics.py
services/backtesting-service/tests/: README.md  __init__.py  conftest.py
services/backtesting-service/tests/integration/: __init__.py  test_backtest_e2e.py
services/backtesting-service/tests/performance/: __init__.py  test_metrics_performance.py  test_throughput.py
services/backtesting-service/tests/unit/: __init__.py  test_data_loader.py  test_event_loop.py  test_matching_engine.py  test_performance_metrics.py  test_portfolio.py  test_risk_metrics.py
services/backtesting-service/tests/validation/: __init__.py  test_metrics_validation.py
services/cognitive-service/: .coverage  .dockerignore  .env.example  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
services/cognitive-service/migrations/: 001_cognitive.sql
services/cognitive-service/src/: __init__.py  config.py  main.py
services/cognitive-service/src/agents/: __init__.py  market_analyst.py  strategy_architect.py  supervisor.py  user_profile_agent.py
services/cognitive-service/src/graph/: __init__.py  state.py  workflow.py
services/cognitive-service/src/routers/: __init__.py  chat.py  strategy.py
services/cognitive-service/src/schemas/: __init__.py  message.py  strategy_config.py  user_profile.py
services/cognitive-service/src/services/: __init__.py  db_service.py  kafka_service.py  llm_service.py
services/cognitive-service/tests/: __init__.py  test_agents.py  test_workflow.py
services/ml-inference-service/: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.test  README.md  TESTS_COMPLETE.md  TEST_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
services/ml-inference-service/docs/: API.md  DEPLOYMENT.md
services/ml-inference-service/models/ensemble_predictor/config/: config.pbtxt
services/ml-inference-service/models/lstm_price_predictor/config/: config.pbtxt
services/ml-inference-service/models/transformer_sentiment/config/: config.pbtxt
services/ml-inference-service/src/: __init__.py  config.py  main.py  triton_client.py
services/ml-inference-service/src/features/: __init__.py  feature_extractor.py
services/ml-inference-service/src/models/: __init__.py  lstm_model.py
services/ml-inference-service/src/monitoring/: __init__.py  metrics.py
services/ml-inference-service/tests/: README.md  __init__.py  conftest.py  test_feature_extractor.py  test_triton_client.py
services/ml-inference-service/tests/integration/: test_api_integration.py
services/ml-inference-service/tests/monitoring/: test_health.py  test_metrics.py
services/ml-inference-service/tests/performance/: test_latency.py  test_throughput.py
services/ml-inference-service/tests/unit/: test_feature_extractor.py  test_lstm_model.py  test_schemas.py  test_triton_client.py
services/ml-inference-service/tests/validation/: test_lstm_validation.py  test_sentiment_validation.py
services/ml-inference-service/training/: train_lstm.py
services/strategy-worker/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
services/strategy-worker/config/: config.yaml
services/strategy-worker/migrations/: 001_strategy_worker.sql
services/strategy-worker/scripts/: generate_protos.sh
services/strategy-worker/src/: __init__.py  config.py  main.py
services/strategy-worker/src/consumer/: __init__.py  strategy_consumer.py
services/strategy-worker/src/database/: __init__.py  pool.py  repository.py
services/strategy-worker/src/executor/: __init__.py  strategy_executor.py
services/strategy-worker/src/grpc_client/: __init__.py  oms_client.py
services/strategy-worker/src/monitor/: __init__.py  position_monitor.py
services/strategy-worker/src/risk/: __init__.py  risk_manager.py
services/strategy-worker/src/utils/: logging.py
services/strategy-worker/tests/: conftest.py  test_position_monitor.py  test_risk_manager.py
shared/python/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
shared/python/aipx/: __init__.py
shared/python/aipx/config/: __init__.py  config.py
shared/python/aipx/kafka/: __init__.py  consumer.py  producer.py
shared/python/aipx/logger/: __init__.py  logger.py
shared/python/aipx/redis/: __init__.py  client.py
shared/python/common/: __init__.py
shared/python/common/config/: __init__.py  env.py  settings.py  validators.py
shared/python/common/kafka/: __init__.py  config.py  consumer.py  exceptions.py  producer.py
shared/python/common/logger/: __init__.py  context.py  logger.py  middleware.py
shared/python/common/redis/: __init__.py  cache.py  client.py  config.py  exceptions.py  lock.py
(+270 files in other folders)
