[project]
name = "cognitive-service"
version = "0.1.0"
description = "Cognitive Service for AIPX using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
