[project]
name = "ml-inference-service"
version = "0.1.0"
description = "ML Inference Service for AIPX - Triton-based model serving"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # FastAPI & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Triton Client (http/grpc only - cuda extras require specific Python versions)
    "tritonclient[http,grpc]>=2.40.0",

    # ML Libraries
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",

    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Monitoring
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",

    # Data Processing
    "pyarrow>=14.0.0",
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-lazy-fixture>=0.6.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "psutil>=5.9.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-lazy-fixture>=0.6.0",
    "locust>=2.20.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance benchmarks",
    "slow: Slow running tests",
    "gpu: Tests requiring GPU",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E722", "W605", "E721", "E731"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
